# cfs_openpgp

./: .gitignore  Cargo.toml  README.md
src/: generate.rs  main.rs  output.rs
